# langchain-basic

./: .env.example  README.md  pyproject.toml
src/examples/: 01_model.py  02_prompt_template.py  03_chain.py  04_output_parser.py  05_runnable_object.py
